# nuell-gon

./: .gitignore  LICENSE  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  pyproject.toml
backend/.venv_local/: pyvenv.cfg
backend/alembic/: env.py
backend/alembic/versions/: 0eb06ddeb386_create_user_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  contact.py  specs.py
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  user.py
backend/src/: lib.rs
docs/architecture/: 002_backend_architecture.md  structure.md
docs/specs/: 001_landing_page.md  002_system_check.md  003_mainframe.md  004_archives.md
src/app/: layout.tsx  page.tsx
src/app/archives/: page.tsx
src/app/chimera-specs/: page.tsx
src/app/comm-link/: page.tsx
src/app/core-systems/: page.tsx
src/app/login/: page.tsx
src/app/mainframe/: page.tsx
src/app/signup/: page.tsx
src/app/system-check/: page.tsx
src/components/dashboard/: ServiceCard.tsx
src/components/features/: HeroSection.tsx
src/components/ui/: ActionButton.tsx
src/styles/: globals.css
